# bouda

bouda/: Makefile.am  Makefile.in  aclocal.m4  configure.in
bouda/data/: Makefile.am  Makefile.in  bouda.config
bouda/launchers/: Makefile.am  Makefile.in  firefox.desktop  nautilus.desktop  terminal.desktop
bouda/pixmaps/: Makefile.am  Makefile.in
bouda/src/: Makefile.am  Makefile.in  bouda.c  bouda.h  cairo-canvas.c  cairo-canvas.h  main.c  mouse-events.c  mouse-events.h  read-icon-list.c  read-icon-list.h  read-png.h  read-properties.c  read-properties.h  validate-config.c  validate-config.h  xutils.c  xutils.h
